--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,22 @@
     <title>Uphome</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-        <div class="brand">
-          
+<body>
+    <div class="top">
+        <div class="top_container container">
+            <header class="header_logo">
+                <img src="pictures/logo.png" alt="logo">
+            </header>
             <div class="brandWrap">
-                <h1 class="brandHeader">Smart Home System</h1>
-                <p class="brandDescription mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, saepe.</p>
+                <h1 class="brandHeader">Smart Home <br> System</h1>
+                <p class="brandDescription mainText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
                 <a href="" class="brandBut">Learn More</a>
             </div>
         </div>
+    </div>
 
-    <div class="ourTeam">
+    <!-- <div class="ourTeam">
         <h3 class="header3">Our Team</h3>
         <div class="TeamCardsBox">
             <div class="TeamsCard">
@@ -111,7 +116,8 @@
                
             </div>
         </div>
-    </footer>
-    </div>
+    </footer> -->
+    <!-- </div> -->
 </body>
+
 </html>
