add changes to advantages block

--- a/index.html
+++ b/index.html
@@ -17,43 +17,53 @@
             </header>
             <div class="brandWrap">
                 <h1 class="brandHeader">Smart Home <br> System</h1>
-                <p class="brandDescription mainText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
+                <p class="brandDescription mainText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                    tristique vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
                 <a href="" class="brandBut">Learn More</a>
             </div>
         </div>
     </div>
 
-    <!-- <div class="ourTeam">
-        <h3 class="header3">Our Team</h3>
-        <div class="TeamCardsBox">
-            <div class="TeamsCard">
-                <img src="pictures/person2.png" alt="person picture" class="TeamsCardImg">
-                <h4 class="header4">Make Your business To Be
-                    Better Famous In Internet</h4>
-                <p class="mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="advantages">
+        <h3 class="advantagesHeader header3">Why You Should Choose Uphome system?</h3>
+        <div class="advantagesCardsBox container">
+            <div class="advantageCard">
+                <img src="pictures/advantages_icon_tariff.png" alt="tariff icon" class="advantageCardImg">
+                <h4 class="advantageCardHeader header4">Сhoose The Most <br> Suatable Tariff</h4>
+                <p class="advantageCardText mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Voluptatibus quasi animi soluta vero laborum? Officia.</p>
-                <a href="#" class="TeamsCardLink">Learn more</a>
+                    <div class="learnMore_block">
+                        <a href="#" class="advantageCardLink">Learn more</a>
+                        <img src="pictures/learnMore_arrow.svg" alt="icon arrow" class="iconArrow">
+                    </div>
             </div>
-            <div class="TeamsCard">
-                <img src="pictures/person1.png" alt="person picture" class="TeamsCardImg">
-                <h4 class="header4">Bring Technology To Your
+            <div class="advantageCard">
+                <img src="pictures/advantages_icon_technonologies.png" alt="technologies icon" class="advantageCardImg">
+                <h4 class="advantageCardHeader header4">Bring Technology To Your
                     Comfrotable Home</h4>
-                <p class="mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <p class="advantageCardText mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Voluptatibus quasi animi soluta vero laborum? Officia.</p>
-                <a href="#" class="TeamsCardLink">Learn more</a>
+                    <div class="learnMore_block">
+                        <a href="#" class="advantageCardLink">Learn more</a>
+                        <img src="pictures/learnMore_arrow.svg" alt="icon arrow" class="iconArrow">
+                    </div>
             </div>
-            <div class="TeamsCard">
-                <img src="pictures/person3.png" alt="person picture" class="TeamsCardImg">
-                <h4 class="header4">Build Your Digital Product
-                    That Suitable For Your Need</h4>
-                <p class="mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <div class="advantageCard">
+                <img src="pictures/advantages_icon_updates.png" alt="updates icon" class="advantageCardImg">
+                <h4 class="advantageCardHeader header4">Regular Updates <br>
+                    In The System</h4>
+                <p class="advantageCardText mainText">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Voluptatibus quasi animi soluta vero laborum? Officia.</p>
-                <a href="#" class="TeamsCardLink">Learn more</a>
+                <div class="learnMore_block">
+                    <a href="#" class="advantageCardLink">Learn more</a>
+                    <img src="pictures/learnMore_arrow.svg" alt="icon arrow" class="iconArrow">
+                </div>
             </div>
+
         </div>
     </div>
 
-    <div class="projects">
+    <!-- <div class="projects">
         <h3 class="header3">Our Finished Project</h3>
         <p class="mainText projectsText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, amet. Lorem
             ipsum, dolor sit amet consectetur adipisicing elit. Libero, recusandae. Lorem ipsum dolor sit amet
@@ -117,7 +127,7 @@
             </div>
         </div>
     </footer> -->
-    <!-- </div> -->
+
 </body>
 
 </html>
